--- a/CA_CheckJava/CA_CheckJava.csproj
+++ b/CA_CheckJava/CA_CheckJava.csproj
@@ -68,6 +68,7 @@
     <None Include="CA_CheckJava.nuspec">
       <SubType>Designer</SubType>
     </None>
+    <None Include="LICENSE.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(WixCATargetsPath)" Condition=" '$(WixCATargetsPath)' != '' " />
