--- a/CA_CheckJava/CA_CheckJava.nuspec
+++ b/CA_CheckJava/CA_CheckJava.nuspec
@@ -5,13 +5,15 @@
     <version>$version$</version>
     <authors>David Bernhard</authors>
     <owners>David Bernhard</owners>
-    <description>WiX Custom Action to check if Java is installed</description>
+    <description>WiX Custom Action to check if Java is installed (and in which bitness)</description>
     <releaseNotes>Initial Release</releaseNotes>
+    <license type="expression">Apache-2.0</license>
     <copyright>Copyright Guntram Meusburger GmbH 2019</copyright>
   </metadata>
 
   <files>
     <file src="bin/Release/CA_CheckJava.CA.dll" target="lib/net45" />
     <file src="CustomAction.config" target="lib" />
+    <file src="LICENSE.md" target="" />
   </files>
 </package>
