--- a/CA_CheckJava/CA_CheckJava.nuspec
+++ b/CA_CheckJava/CA_CheckJava.nuspec
@@ -15,6 +15,6 @@
   <files>
     <file src="bin/Release/CA_CheckJava.CA.dll" target="lib/net45" />
     <file src="CustomAction.config" target="lib" />
-    <file src="LICENSE.md" target="" />
+    <file src="../LICENSE.md" target="" />
   </files>
 </package>
