added github repository and tags in .nuspec

--- a/CA_CheckJava/CA_CheckJava.nuspec
+++ b/CA_CheckJava/CA_CheckJava.nuspec
@@ -9,7 +9,9 @@
     <releaseNotes>Initial Release</releaseNotes>
     <license type="expression">Apache-2.0</license>
     <projectUrl>https://github.com/wbicode/CA_CheckJava</projectUrl>
+    <repository type="git" url="https://github.com/wbicode/CA_CheckJava"/>
     <copyright>Copyright Guntram Meusburger GmbH 2019</copyright>
+    <tags>WiX Installer MSI</tags>
   </metadata>
 
   <files>
